[gd_scene load_steps=11 format=2]

[ext_resource path="res://interface/MenuBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/theme/Interface.theme" type="Theme" id=2]
[ext_resource path="res://interface/theme/title_font_large.tres" type="DynamicFont" id=3]
[ext_resource path="res://music/MusicPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/theme/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://robot/robot_sprites.png" type="Texture" id=6]
[ext_resource path="res://interface/MainMenu.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.984314, 0, 0.168627, 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 8 )

[node name="MenuBackground" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 958, 188 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
hframes = 3
vframes = 2

[node name="Header" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 419.0

[node name="V" type="VBoxContainer" parent="Header"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -58.0
margin_bottom = 58.0

[node name="HeaderLabel" type="Label" parent="Header/V"]
margin_right = 1920.0
margin_bottom = 89.0
custom_colors/font_color = Color( 1, 0.356863, 0.0588235, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "GD Adventure"
align = 1
valign = 1

[node name="VersionLabel" type="Label" parent="Header/V"]
margin_top = 93.0
margin_right = 1920.0
margin_bottom = 116.0
custom_colors/font_color = Color( 0.74902, 0.74902, 0.737255, 1 )
custom_fonts/font = SubResource( 2 )
text = "Version 1.1.2"
align = 1
valign = 1

[node name="Menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -274.0
margin_top = -175.5
margin_right = 274.0
margin_bottom = 175.5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartButton" type="Button" parent="Menu/VBoxContainer"]
margin_right = 548.0
margin_bottom = 60.0
text = "Start Game"

[node name="LoadButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 64.0
margin_right = 548.0
margin_bottom = 124.0
text = "Load Game"

[node name="HighscoreButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 128.0
margin_right = 548.0
margin_bottom = 188.0
text = "Highscore"

[node name="InfoButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 192.0
margin_right = 548.0
margin_bottom = 252.0
text = "Information"

[node name="ExitButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 256.0
margin_right = 548.0
margin_bottom = 316.0
text = "Quit Game"

[node name="MusicPlayer" parent="." instance=ExtResource( 4 )]
volume_db = -30.0

[node name="Branding" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -81.0

[node name="BrandLabel" type="Label" parent="Branding"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.0
custom_colors/font_color = Color( 0.537255, 0.54902, 0.54902, 0.647059 )
custom_fonts/font = SubResource( 1 )
text = "2022 Copyright by S3R43o3"
align = 1
valign = 1

[node name="Scores" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -709.0
margin_top = -180.0
margin_right = -138.0
margin_bottom = 161.0
__meta__ = {
"_edit_group_": true
}

[node name="BG" type="TextureRect" parent="Scores"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="Scores"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Scores/V"]
margin_right = 571.0
margin_bottom = 60.0
text = "Highscore"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Scores/V"]
margin_top = 64.0
margin_right = 571.0
margin_bottom = 68.0

[node name="HighscoreLabel" type="Label" parent="Scores/V"]
margin_top = 72.0
margin_right = 571.0
margin_bottom = 132.0
align = 1
valign = 1
autowrap = true

[node name="NamePanel" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.5
margin_top = -211.0
margin_right = 260.5
margin_bottom = 211.0
__meta__ = {
"_edit_group_": true
}

[node name="V" type="VBoxContainer" parent="NamePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 12
alignment = 1

[node name="NameInfolabel" type="Label" parent="NamePanel/V"]
margin_top = 45.0
margin_right = 521.0
margin_bottom = 231.0
text = "Please enter a player name
"
align = 1
valign = 1
autowrap = true

[node name="NameEdit" type="LineEdit" parent="NamePanel/V"]
margin_top = 243.0
margin_right = 521.0
margin_bottom = 305.0
custom_styles/normal = SubResource( 3 )
align = 1
placeholder_text = "enter name here"

[node name="H" type="HBoxContainer" parent="NamePanel/V"]
margin_top = 317.0
margin_right = 521.0
margin_bottom = 377.0
alignment = 1

[node name="Cancel" type="Button" parent="NamePanel/V/H"]
margin_right = 258.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Cancel"

[node name="StartGame" type="Button" parent="NamePanel/V/H"]
margin_left = 262.0
margin_right = 521.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Start"
